<resources>
    <string name="app_name">Blood Banking App</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Not Registered?<u> Sign Up here</u></string>
    <string name="message">Donate blood.Save life.Save the humanity.And also get help by the other blood donors.Best Wishes!</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="blood_group">Blood Group</string>
    <string name="register">Register</string>
    <string name="choose_location">Search location</string>
    <string name="search_donor">Search Donor</string>
    <string name="make_a_request">Make a Request</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="request_image">Request Image</string>
    <string name="write_request_here">Write request here</string>
    <string name="post">Post</string>
    <string name="upload_image_hint">Upload Image</string>
    <string name="logout">LogOut</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="date">Date</string>
    <string name="datetime">yyyy/mm/dd</string>
    <string name="image_upload">image Upload</string>
    <string name="your_city">Your city</string>
    <string name="today">Today</string>
    <string name="no_requests">No Requests</string>
    <string name="remember_me">Remember me</string>
    <string name="search_by_location">Search by location</string>
    <string name="city">City</string>
    <string name="your_name">Your name</string>
    <string name="remove_blood_from_stock">Can\'t donate blood right now</string>
    <string name="are_you_sure_you_want_to_delete_this_request">Are you sure, you want to delete this request?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_name">Your name</string>
    <string name="edit_city">Your city</string>
    <string name="edit_blood_group">Blood group</string>
    <string name="edit_phone">Phone</string>
    <string name="edit_email">Email</string>
    <string name="update">Update</string>
    <string name="update_profile">Update your profile</string>
    <string name="your_posts">Your Posts</string>
    <string name="settings">Settings</string>
    <string name="change_your_password">Change your password</string>
    <string name="delete_account">Delete Account</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password"><u>Reset Password</u></string>
    <string name="messge">(Email address will remain same for login)</string>
    <string name="show_less">..Show less</string>
    <string-array name="names">
        <item>Choose Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="cityNames">
        <item>Choose City</item>
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Cumilla</item>
        <item>Rajshahi</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
        <item>Barishal</item>
        <item>Chadpur</item>
        <item>Khulna</item>
        <item>Mymensingh</item>
    </string-array>
</resources>