<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/holo_red_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_marginTop="2dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_shp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <AutoCompleteTextView
                android:id="@+id/Email"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_shp"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="17sp"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/login_button"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="@drawable/button_shp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/resetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/sign_UpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="17sp" />


    </LinearLayout>


</androidx.core.widget.NestedScrollView>