<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/are_you_sure_you_want_to_delete_this_request"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/conf_no_button"
                android:text="@string/no"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/conf_yes_button"
                android:text="@string/yes"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="70dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>