<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/r_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_red_light">
        </androidx.appcompat.widget.Toolbar>
        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="181dp"
                android:background="@android:color/darker_gray">

                <ImageView
                    android:id="@+id/post_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/imageText"
                    android:layout_width="291dp"
                    android:layout_height="22dp"
                    android:gravity="center"
                    android:text="@string/upload_image_hint"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/uploadImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/post_userCity_textView"
                    android:layout_width="89dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/your_city"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.106" />

                <TextView
                    android:id="@+id/post_username_textView"
                    android:layout_width="89dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="96dp"
                    android:text="@string/your_name"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/post_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/today"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.024"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/post_username_textView" />

                <ImageView
                    android:id="@+id/uploadImage"
                    android:layout_width="81dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/image_upload"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.495"
                    app:srcCompat="@android:drawable/ic_menu_camera" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:id="@+id/Uploadline"
                android:layout_marginTop="180dp"
                android:layout_marginBottom="180dp"
                android:background="@android:color/black"
                android:layout_below="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/insert_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="180dp"
                android:autofillHints=""
                android:gravity="fill_horizontal"
                android:hint="@string/write_request_here"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:text=""
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/postButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:background="@drawable/button_shp"
            android:padding="10dp"
            android:text="@string/post"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>